--- a/gemver/Makefile
+++ b/gemver/Makefile
@@ -5,3 +5,7 @@ all:
 	clang gemver2.c -O3 -Wno-everything -o gemver2.out
 	./gemver2.out 2> 2.output
 	diff -u 1.output 2.output
+
+clean:
+	rm -f *.out .output *.output *.scop *.pluto.c *.pluto.cloog .outfilename .regtile .srcfilename
+
