--- a/covcol/Makefile
+++ b/covcol/Makefile
@@ -5,3 +5,6 @@ all:
 	clang covcol2.c -O3 -Wno-everything -o covcol2.out
 	./covcol2.out 2> 2.output
 	diff -u 1.output 2.output
+
+clean:
+	rm -f *.out .output *.output *.scop *.pluto.c *.pluto.cloog .outfilename .regtile .srcfilename
